Adicionando testes que faltam, Adicionando configuração do Swagger, Adicionando configuração do Dockerfile